--- a/naive-todo/index.html
+++ b/naive-todo/index.html
@@ -7,6 +7,10 @@
     <title>naive todo</title>
   </head>
   <body>
+    <form onsubmit="handleFormSubmit()">
+      <input id="task-input" />
+      <button>登録する</button>
+    </form>
     <script src="index.js"></script>
   </body>
 </html>
