Fix: Unordered list and inner text in button

--- a/naive-todo/index.html
+++ b/naive-todo/index.html
@@ -9,8 +9,9 @@
   <body>
     <form onsubmit="handleFormSubmit()">
       <input id="task-input" />
-      <button>登録する</button>
+      <button>Submit</button>
     </form>
+    <ul id="todo-elements"></ul>
     <script src="index.js"></script>
   </body>
 </html>
