Fix: Form attribute

--- a/naive-mvc2-todo/index.html
+++ b/naive-mvc2-todo/index.html
@@ -7,7 +7,7 @@
     <title>naive todo</title>
   </head>
   <body>
-    <form onsubmit="handleFormSubmit()">
+    <form id="task-send-form">
       <input id="task-input" />
       <button>Submit</button>
     </form>
